--- a/beatbuilder-front/src/css/navbar_initial_page_style.css
+++ b/beatbuilder-front/src/css/navbar_initial_page_style.css
@@ -22,6 +22,22 @@
   animation: move 30s linear infinite;
 }
 
+.neon-bg {
+  transition: .3s linear;
+  background-image: linear-gradient(to bottom right, #0ccdfd, #20a3f5, #ff00c3, black);
+  background-size: 200%;
+  animation: move-bg 20s linear infinite;
+}
+
+@keyframes move-bg {
+  0%, 100% {
+    background-position: 100% 100%;
+  }
+  50% {
+    background-position: 0 0;
+  }
+}
+
 @keyframes move {
   100% {
     background-position: 2000px 0;
